# djangoProject

./: db.sqlite3  pyproject.toml
djangoProject/: api.py  pagination.py  settings.py  urls.py
rental/: api_views.py  filters.py  managers.py  models.py  permissions.py  serializers.py
rental/migrations/: 0001_initial.py  0002_belonging_owner_borrowed_owner_friend_owner.py  0003_friend_email.py
