[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["bogdankozlovsky <bogdan.k@datarails.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.15"
djangorestframework = "3.13.1"
djoser = "^2.1.0"
pendulum = "^2.1.2"
djangorestframework-link-header-pagination = "^0.1.1"
django-filter = "^22.1"
drf-extensions = "^0.7.1"
drf-dynamic-fields = "^0.4.0"
drf-flex-fields = "^1.0.0"
dynamic-rest = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
